packages/kotlin/ttrp-frontend/src/test/resources/negative/eq-001.ttrp
x = filter(s, amount == 0)
